--- a/styles.css
+++ b/styles.css
@@ -518,6 +518,11 @@ samp:nth-of-type(8) { --rotation: 1deg; }
     z-index: 10;
 	max-width: 208px;
 }
+main-projects{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
 .background-non-square h2{
     -ms-transform: skew(10deg, 0deg);
     transform: skew(10deg, 0deg);
